提交插件源码分析，待改进